--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = "https://decksblog.onrender.com/"
-title   = "Hello Friend NG"
+title   = "Decks Blogs"
 languageCode = "en-us"
 theme = "hello-friend-ng"
 
@@ -68,7 +68,7 @@ disableHugoGeneratorInject = false
 
   # Home subtitle of the index page.
   #
-  homeSubtitle = "Hello Friend NG"
+  homeSubtitle = "Tadaa!"
 
   # Set a background for the homepage
   # backgroundImage = "assets/images/background.jpg"
@@ -216,7 +216,7 @@ disableHugoGeneratorInject = false
   #      - boxy-light
   #      - gruvbox-dark
   #
-  #   theme      = ""
+  #   theme      = "github-dark-orange"
   # 
 
   # # # # # # # # # # # # # # # # # # # # # # # # # # # # #  
@@ -248,12 +248,6 @@ disableHugoGeneratorInject = false
     weight    = 1
     copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
   [languages.en.params]
-    subtitle  = "Hello Friend NG Theme"
-
-  [languages.fr]
-    weight    = 2
-    copyright = '<a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="noopener">CC BY-NC 4.0</a>'
-  [languages.fr.params]
     subtitle  = "Hello Friend NG Theme"
 
 [menu]
